--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="aiyuan1996.cn.firerunning.activity.MainActivity">
+    tools:context="aiyuan1996.cn.firerunning.ui.MainActivity">
 
     <aiyuan1996.cn.firerunning.Utils.PinchImageView
         android:layout_width="match_parent"
