--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,46 +1,83 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@mipmap/login">
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/w_match_h_match"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="20dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        style="@style/w_match_h_match"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editEmail"
+            android:id="@+id/et_phone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:inputType="textEmailAddress"
-            android:text="@string/dummy_email" />
+            android:layout_height="45dp"
+            android:background="@drawable/edittext_bg"
+            android:hint="手机号"
+            android:paddingLeft="20dp"
+            android:textSize="16sp"/>
 
         <EditText
-            android:id="@+id/editPassword"
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edittext_bg"
+            android:hint="密码"
             android:inputType="textPassword"
-            android:text="@string/dummy_password" />
+            android:paddingLeft="20dp"
+            android:textSize="16sp"/>
 
-        <com.dd.processbutton.iml.ActionProcessButton
-            android:id="@+id/btnSignIn"
+        <LinearLayout
+            style="@style/w_match_h_wrap"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical">
+
+            <CheckBox
+                android:id="@+id/keep_password"
+                style="@style/w_wrap_h_wrap"
+                android:layout_gravity="right"
+                android:text="@string/text_keep_password"
+                android:textColor="@color/colorAccent"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/Sign_in"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="@string/Success"
-            custom:pb_textProgress="@string/Loading" />
+            android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/text_login"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
+
+    <RelativeLayout
+        style="@style/w_match_h_wrap"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:id="@+id/tv_forget"
+            style="@style/w_wrap_h_wrap"
+            android:layout_alignParentLeft="true"
+            android:text="@string/text_find_password"
+            android:textColor="@color/colorAccent"/>
+
+        <TextView
+            android:id="@+id/tv_registered"
+            style="@style/w_wrap_h_wrap"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="right"
+            android:text="@string/text_registered"
+            android:textColor="@color/colorAccent"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
