--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#393A3F</color>
+    <color name="colorPrimaryDark">#303135</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="bottom_tab_bg">#EBEBEB</color>
+    <color name="color_background">#EBEBEB</color>
+    <color name="button_default">#4c4d51</color>
+    <color name="button_pressed">#58585c</color>
+
+    <!-- bottom navigation start-->
+    <color name="color_nav_default">#3E4757</color>
+    <color name="color_nav_pressed">#FF4081</color>
+    <!-- bottom navigation end-->
+
+    <color name="base_color">#393A3F</color>
+    <color name="color_white">#ffffff</color>
+    <color name="color_black">#000000</color>
+
+    <!-- 透明色-->
+    <color name="transparent">#00000000</color>
+    <color name="color_border">#66666666</color>
+
+    <color name="clr_main_text">#000000</color>
+    <color name="clr_sub_text">#b4af96</color>
+    <color name="clr_form_line">#80808069</color>
 </resources>
