--- a/app/src/main/res/layout/webview_item.xml
+++ b/app/src/main/res/layout/webview_item.xml
@@ -6,7 +6,7 @@
     <WebView
         android:id="@+id/id_webview"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent">
     </WebView>
 
 </LinearLayout>
