--- a/app/src/main/res/layout/activity_user_manage.xml
+++ b/app/src/main/res/layout/activity_user_manage.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ListView
-        android:id="@+id/list_settings"
+        android:id="@+id/user_manage"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
     </ListView>
 
 </LinearLayout>
