--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -6,10 +6,16 @@
     android:layout_height="match_parent"
     tools:context="aiyuan1996.cn.firerunning.ui.PushActivity.webViewActivity">
 
-    <WebView
-        android:id="@+id/webview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_reflush"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </RelativeLayout>
