--- a/app/src/main/res/layout/set_push_time.xml
+++ b/app/src/main/res/layout/set_push_time.xml
@@ -1,8 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_root"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/tiledstripes" >
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="fill_parent"
